Fix login-container not aligning to right when user is logged in

--- a/Projects/Frontend/src/components/shared/Header/Header.scss
+++ b/Projects/Frontend/src/components/shared/Header/Header.scss
@@ -13,7 +13,7 @@
     transform: translateX(-50%);
   }
 
-  .login {
+  .login-container {
     margin-left: auto;
   }
 
